<resources>
    <string name="app_name">DOVE</string>
    <string name="welcome">Connect easily with your family and friends over countries</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="placeholder">Placeholder</string>
    <string name="contacts">Contacts</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="resigter">Resigter</string>
    <string name="register">register</string>
    <string name="already_got_an_account_login">Already got an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_name">Enter name</string>
    <string name="email">Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_email">Enter email</string>
    <string name="add_contact">Add Contact</string>
    <string name="add">Add</string>
    <string name="cancel">CANCEL</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
</resources>