<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/font"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_contact" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="50dp"
        android:paddingStart="5dp"
        android:textColor="@color/font"
        android:paddingEnd="5dp"
        android:textColorHint="@color/hint"
        android:background="@drawable/plain_text"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>