<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sign.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/email"/>


        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="start"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:text="@string/login_to_your_account"
            android:layout_marginLeft="10dp"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp"
            android:background="@drawable/plain_text"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email"
                android:textColorHint="@color/hint"
                android:textColor="@color/font"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPasswordInputLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_margin="10dp"
            android:background="@drawable/plain_text"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/hint"
                android:textColor="@color/font"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="25"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvLoginToRegister"
            android:clickable="true"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:focusable="true" />



    </LinearLayout>

</ScrollView>