<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.sign.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="start"
            android:textColor="@color/font"
            android:textStyle="bold"
            android:text="@string/register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/hint"
            android:background="@drawable/plain_text"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_name"
                android:textColorHint="@color/hint"
                android:textColor="@color/font"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                android:maxLength="25"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/hint"
            android:background="@drawable/plain_text"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_email"
                android:textColorHint="@color/hint"
                android:textColor="@color/font"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="25"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColorHint="@color/hint"
            android:background="@drawable/plain_text"
            android:padding="0dp"
            app:boxBackgroundColor="@android:color/transparent">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_password"
                android:textColorHint="@color/hint"
                android:textColor="@color/font"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                tools:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textSize="16sp" />



        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvRegisterToLogin"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/already_got_an_account_login"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:focusable="true" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".5" />
    </LinearLayout>

</ScrollView>