<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:gravity="start"
            android:text="@string/profile"
            android:textColor="@color/font"
            android:textSize="30sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:layout_gravity="center"
                    android:src="@drawable/defaultavatar" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/cvAvatar"
                android:text="Pham Tuan Giang"
                android:textColor="@color/font"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/cvAvatar"
                android:text="zanggg@gmail.com"
                android:textColor="@color/hint"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/llPersonal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_personal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:gravity="center_vertical"
                android:textColor="@color/font"
                android:text="@string/account" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true">

            <ImageView
                android:id="@+id/imgLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:textSize="25sp"
                android:gravity="center_vertical"
                android:textColor="@color/font"
                android:text="@string/logout" />

            <ImageView
                android:id="@+id/imgArrowLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>